# sensorplot

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
_old/: baro.py
example/: example_config.yaml  example_embed-app.py
src/sensorplot/: __main__.py  app.py  cli.py  core.py
tests/: test_core.py  test_data_handling.py  test_multiserie.py
tests/data/: Baro.xlsx  Barologger 2024.csv  Laksemyra_1.xlsx  Laksmyra 3 2024.csv  Laksmyra1 2024.csv  Laksmyra2 2024.csv  Mun-data1-2022.xlsx  Munn-baro-2022.xlsx  TAP-Baro.xlsx  TAP-data.xlsx
