[tool.poetry]
name = "sensorplot"
version = "0.1.0"
description = "Verktøy for analyse av sensordata"
authors = ["Ditt Navn <deg@eksempel.no>"]
readme = "README.md"
packages = [{include = "sensorplot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
matplotlib = "^3.8.0"
openpyxl = "^3.1.0"
pyyaml = "^6.0.3"
streamlit = "^1.52.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
sensorplot = "sensorplot.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"